Adds localStorage and cookies to allow persistence

--- a/src/school/school.html
+++ b/src/school/school.html
@@ -14,8 +14,8 @@
             <i class="fa fa-file-o"></i>
             <i class="fa fa-trash-o"></i>
           </div>
-          <div class="switch-container">
-            <input bs-switch type="checkbox" ng-model="school.isActive">
+          <div class="switch-container" >
+            <input bs-switch type="checkbox" ng-model="school.isActive" ng-click="updateSchoolStatus()">
           </div>
         </div>
       </div>
