--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
   <script src="/vendor/angular-file-saver/dist/angular-file-saver.min.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
   <script src="/vendor/angular-touch/angular-touch.min.js"></script>
+  <script src="/vendor/angular-cookies/angular-cookies.min.js"></script>
+  <script src="/vendor/ngstorage/ngStorage.min.js"></script>
   <script src="/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="/vendor/angular-momentjs/angular-momentjs.min.js"></script>
   <script src="/vendor/angular-tour/dist/angular-tour.min.js"></script>
