--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
           </header>
           <div ui-view></div>
           <footer>
-            <div class="row panel">
+            <div class="row panel footer-toolbar">
               <div class="col-xs-6 col-xs-offset-3">
                 <i class="fa fa-clock-o"></i>
-                <i id="sms-setup" class="fa fa-comment-o"></i>
+                <a ui-sref="sms"><i id="sms-setup" class="fa fa-comment-o"></i></a>
               </div>
               <div class="col-xs-3">
-                <i class="fa fa-plus"></i>
+                <i class="fa fa-plus" ng-if="showAdd"></i>
               </div>
             </div>
             <div class="row">
@@ -97,6 +97,7 @@
   <script src="/vendor/angular-animate/angular-animate.js"></script>
   <script src="/vendor/angular-touch/angular-touch.min.js"></script>
   <script src="/vendor/angular-cookies/angular-cookies.min.js"></script>
+  <script src="/vendor/angular-ui-mask/dist/mask.min.js"></script>
   <script src="/vendor/ngstorage/ngStorage.min.js"></script>
   <script src="/vendor/moment/min/moment-with-locales.min.js"></script>
   <script src="/vendor/angular-momentjs/angular-momentjs.min.js"></script>
