--- a/src/reminder/reminder.html
+++ b/src/reminder/reminder.html
@@ -3,10 +3,10 @@
     <nav-links></nav-links>
     <div class="row">
       <div class="col-xs-12">
-        <div ng-repeat="date in reminderGroups" class="date-group">
-          <h2 role="button" ng-click="date.isCollapsed = !date.isCollapsed">{{ date.date }}</h2>
-          <div collapse="date.isCollapsed">
-            <div ng-repeat="reminder in date.reminders" class="reminder-group">
+        <div ng-repeat="timeframe in reminderGroups" class="date-group">
+          <h2 role="button" ng-click="timeframe.isCollapsed = !timeframe.isCollapsed">{{ timeframe.timeframe }}</h2>
+          <div collapse="timeframe.isCollapsed">
+            <div ng-repeat="reminder in timeframe.reminders" class="reminder-group">
               <h3 role="button" ng-click="reminder.isCollapsed = !reminder.isCollapsed">{{ reminder.name }}</h3>
               <div collapse="!reminder.isCollapsed" class="reminder-info">
                 <p class="reminder-message">{{ reminder.message }}</p>
