--- a/src/school/school.html
+++ b/src/school/school.html
@@ -15,7 +15,7 @@
             <i class="fa fa-trash-o"></i>
           </div>
           <div class="switch-container" >
-            <input bs-switch type="checkbox" ng-model="school.isActive">
+            <input bs-switch type="checkbox" ng-model="school.isActive" ng-change="updateActive(school.id, school.isActive)">
           </div>
         </div>
       </div>
