--- a/src/user/user.html
+++ b/src/user/user.html
@@ -1,4 +1,4 @@
-<main class="row sms-view">
+<main class="row user-view">
   <div class="sms-setup" ng-show="showInitialSetup">
     <div class="sms-setup-step-1" ng-show="smsSetupStep === 1">
       <div class="col-xs-12">
