Fixes some missing variables in the rename from sms -> user

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="row panel footer-toolbar">
               <div class="col-xs-6 col-xs-offset-3">
                 <i class="fa fa-clock-o"></i>
-                <a ui-sref="sms"><i id="sms-setup" class="fa fa-comment-o"></i></a>
+                <a ui-sref="user"><i id="user-setup" class="fa fa-comment-o"></i></a>
               </div>
               <div class="col-xs-3">
                 <i class="fa fa-plus" ng-if="showAdd"></i>
