Begins refactoring of user-related operations to be subviews of user.

--- a/src/user/sms-add/smsAdd.html
+++ b/src/user/sms-add/smsAdd.html
@@ -31,3 +31,10 @@
     </div>
   </div>
 </main>
+
+<script type="text/ng-template" id="sendCodeModal.html">
+  <div class="modal-body">
+    <p>Check your device. We are sending you a code now<span ng-show="isSmsSetup"> to confirm it's you</span>.</p>
+    <button class="btn btn-primary" ng-click="ok()">I Got It</button>
+  </div>
+</script>
