Finishes refactoring of user-related options into subviews of user

--- a/src/school/school.html
+++ b/src/school/school.html
@@ -24,7 +24,7 @@
 </main>
 <tour step="currentStep">
   <virtual-step tourtip="Click here to set up your text messages"
-                tourtip-element="#sms-setup"
+                tourtip-element="#user-setup"
                 tourtip-placement="center"
                 tourtip-step="0"
                 tourtip-margin="100"
