--- a/src/user/codes-add/codesAdd.html
+++ b/src/user/codes-add/codesAdd.html
@@ -49,7 +49,7 @@
 </main>
 
 <script type="text/ng-template" id="smsCompletionModal.html">
-  <div class="modal-body">
+  <div class="modal-body sms-completion-modal">
     <p>GREAT!</p>
     <p>You're all setup.</p>
     <button class="btn btn-primary" ng-click="ok()">that was easy</button>
