--- a/src/user/login-update/loginUpdate.html
+++ b/src/user/login-update/loginUpdate.html
@@ -39,14 +39,14 @@
 </main>
 
 <script type="text/ng-template" id="loginUpdateSendCodeModal.html">
-  <div class="modal-body">
+  <div class="modal-body login-update-send-code-modal">
     <p>Check your device. We are sending you a code now to confirm it's you.</p>
     <button class="btn btn-primary" ng-click="ok()">I Got It</button>
   </div>
 </script>
 
 <script type="text/ng-template" id="loginUpdateCompletionModal.html">
-  <div class="modal-body">
+  <div class="modal-body login-update-completion-modal">
     <p>You're Login Code has been changed.</p>
     <button class="btn btn-primary" ng-click="ok()">that was easy</button>
   </div>
