--- a/src/user/sms-add/smsAdd.html
+++ b/src/user/sms-add/smsAdd.html
@@ -33,7 +33,7 @@
 </main>
 
 <script type="text/ng-template" id="sendCodeModal.html">
-  <div class="modal-body">
+  <div class="modal-body send-code-modal">
     <p>Check your device. We are sending you a code now.</p>
     <button class="btn btn-primary" ng-click="ok()">I Got It</button>
   </div>
