--- a/src/user/sponsor-update/sponsorUpdate.html
+++ b/src/user/sponsor-update/sponsorUpdate.html
@@ -25,7 +25,7 @@
 </main>
 
 <script type="text/ng-template" id="sponsorUpdateCompletionModal.html">
-  <div class="modal-body">
+  <div class="modal-body sponsor-update-completion-modal">
     <p>You Are Now Sponsored!</p>
     <button class="btn btn-primary" ng-click="ok()">that was easy</button>
   </div>
