--- a/src/user/user.html
+++ b/src/user/user.html
@@ -12,7 +12,9 @@
 <script type="text/ng-template" id="forgetUser.html">
   <div class="modal-body">
     <p>YadaGuru will erase all your data.  If you just want to stop text, turn off texting on the Reminders Page.  If you really want us to forget you, click the button. </p>
-    <button class="btn btn-primary" ng-click="cancel()">Nevermind</button>
-    <button class="btn btn-danger" ng-click="ok()">Forget Me</button>
+    <div class="btn-container">
+      <button class="btn btn-primary" ng-click="cancel()">Nevermind</button>
+      <button class="btn btn-danger" ng-click="ok()">Forget Me</button>
+    </div>
   </div>
 </script>
