--- a/src/user/sponsor-update/sponsorUpdate.html
+++ b/src/user/sponsor-update/sponsorUpdate.html
@@ -9,7 +9,7 @@
                class="form-control"
                placeholder="sponsor code"
                id="sponsor-code"
-               ng-model="$parent.sponsorCode"
+               ng-model="sponsorCode"
                name="sponsorCode"
                required>
       </div>
