Styles User views

--- a/src/user/codes-add/codesAdd.html
+++ b/src/user/codes-add/codesAdd.html
@@ -1,4 +1,4 @@
-<main class="row user-codes-add-view">
+<main class="row user-view user-codes-add-view">
   <div class="col-xs-12">
     <form name="codesAddForm">
       <div class="form-group">
