--- a/src/user/login-update/loginUpdate.html
+++ b/src/user/login-update/loginUpdate.html
@@ -1,4 +1,4 @@
-<main class="row user-login-update-view">
+<main class="row user-view user-login-update-view">
   <div class="col-xs-12">
     <form name="loginUpdateForm" ng-show="isLoginUpdateFormVisible">
       <div class="form-group">
