--- a/src/user/sponsor-update/sponsorUpdate.html
+++ b/src/user/sponsor-update/sponsorUpdate.html
@@ -1,4 +1,4 @@
-<main class="row user-sponsor-update-view">
+<main class="row user-view user-sponsor-update-view">
   <div class="col-xs-12">
     <form name="sponsorUpdateForm">
       <div class="form-group">
