--- a/src/user/sms-add/smsAdd.html
+++ b/src/user/sms-add/smsAdd.html
@@ -1,4 +1,4 @@
-<main class="row user-sms-add-view">
+<main class="row user-view user-sms-add-view">
   <div class="col-xs-12">
     <p>Enter your mobile number. We'll send you a code to use for the next step.</p>
     <form name="smsForm">
