Refactors privacy page, and creates FAQ and disclaimer pages that now pull content from the database

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             </div>
             <div class="row">
               <div class="footer-links col-xs-12">
-                <a href="#">Privacy Policy</a> |
-                <a href="#">About YadaGuru</a> |
-                <a href="#">Disclaimer</a>
+                <a ui-sref="privacy">Privacy Policy</a> |
+                <a ui-sref="faqs">About YadaGuru</a> |
+                <a ui-sref="disclaimer">Disclaimer</a>
               </div>
             </div>
           </footer>
