--- a/src/disclaimer/disclaimer.html
+++ b/src/disclaimer/disclaimer.html
@@ -1,6 +1,6 @@
-<main class="row privacy-view">
+<main class="row disclaimer-view">
   <div class="col-xs-12">
-    <h2 class="content-panel-header">YadaGuru Privacy Policy</h2>
+    <h2 class="content-panel-header">Disclaimer</h2>
     <div class="panel content-panel" ng-bind-html="content"></div>
   </div>
 </main>
