--- a/src/faqs/faqs.html
+++ b/src/faqs/faqs.html
@@ -1,7 +1,8 @@
-<div class="container">
-  <div class="col-sm-8 col-sm-offset-2">
-    <h2 class="text-center">Frequently Asked Questions</h2>
-    <p class="text-center"><a href="/#/">Back to Form</a></p>
-    <div ng-bind-html="faqContent"></div>
+<main class="row faq-view">
+  <div class="col-xs-12">
+    <h2 class="content-panel-header">Contact Us</h2>
+    <div class="panel content-panel" ng-bind-html="contact"></div>
+    <h2 class="content-panel-header">FAQs</h2>
+    <div class="panel content-panel" ng-bind-html="faqs"></div>
   </div>
-</div>
+</main>
