Builds out help service. Refactors existing help modals to use help service

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="row">
               <div class="col-xs-2 col-xs-offset-10">
-                <i class="fa fa-question-circle"></i>
+                <i class="fa fa-question-circle" ng-click="showHelp(currentState)"></i>
               </div>
             </div>
           </header>
