--- a/src/school/school.html
+++ b/src/school/school.html
@@ -22,7 +22,7 @@
     </div>
   </div>
 </main>
-<tour step="currentStep">
+<tour step="currentStep" tour-complete="showPhoneOptOutModal()">
   <virtual-step tourtip="Click here to set up your text messages"
                 tourtip-element="#user-setup"
                 tourtip-placement="center"
