Finishes refactoring of onboarding. Refactors userService to handle the getting and setting of the current user id. Refactors modalService to make it more extensible

--- a/src/school/school.html
+++ b/src/school/school.html
@@ -23,7 +23,7 @@
   </div>
 </main>
 <tour step="currentStep" tour-complete="showPhoneOptOutModal()">
-  <virtual-step tourtip="Click here to set up your text messages"
+  <virtual-step tourtip="Click here to manage your text messages"
                 tourtip-element="#user-setup"
                 tourtip-placement="center"
                 tourtip-step="0"
