--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
               <div class="footer-links col-xs-12">
                 <a ui-sref="privacy">Privacy Policy</a> |
                 <a ui-sref="faqs">About YadaGuru</a> |
-                <a ui-sref="disclaimer">Disclaimer</a>
+                <a ui-sref="disclaimer">Disclaimer</a> |
+                <span class="footer-link" ng-click="logout()">LOGOUT</span>
               </div>
             </div>
           </footer>
